ECOPROJECT-4654 | refactor: removed deprecated APIs
Removed the cluster_rightsizing routes


# Conflicts:
#	api/v1/spec.gen.go

# Conflicts:
#	api/v1/spec.gen.go
